12-kubernetes-05-cni/assets/hello-world.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world
  name: hello-world
  namespace: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: k8s.gcr.io/echoserver:1.4
        name: echoserver

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
  namespace: hello-world
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: hello-world
  type: NodePort
